# carefree-core

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: checks.yml  test.yml
benchmarks/: README.md  __init__.py  _import_worker.py  _protocol.py  _worker.py  registry.py  report-v1.schema.json  run.py
benchmarks/baselines/: README.md
benchmarks/scenarios/: __init__.py  _testing.py  imports.py  learn.py  toolkit.py
core/: parameters.py
core/flow/: __init__.py  core.py  docs.py  server.py  utils.py
core/flow/nodes/: __init__.py  common.py  schema.py
core/learn/: __init__.py  constants.py  inference.py  metrics.py  monitors.py  optimizers.py  schedulers.py  schema.py  testing.py  toolkit.py  trainer.py
core/learn/callbacks/: __init__.py  common.py  defaults.py  detectors.py  loggers.py
core/learn/data/: array.py
core/learn/losses/: __init__.py  basic.py  schema.py
core/learn/models/: common.py
core/learn/modules/: __init__.py  activations.py  common.py  fcnn.py  linear.py  moe.py
core/learn/modules/ml/: __init__.py  fcnn.py  linear.py
core/learn/pipeline/: api.py  common.py  schema.py  third_party.py
core/learn/pipeline/blocks/: __init__.py  basic.py  utils.py
core/toolkit/: __init__.py  array.py  console.py  cv.py  data_structures.py  geometry.py  misc.py  perf.py  pipeline.py  types.py  web.py
requirements/: constraints-ci.txt
tests/: conftest.py  test_benchmarks.py  test_packaging_smoke.py  test_template.py
tests/test_flow/: test_core.py  test_documents.py  test_logics.py  test_nodes.py  test_server.py  test_utils.py
tests/test_learn/: conftest.py  ddp_harness.py  ddp_harness_task.py  ddp_linear_task.py  ddp_task.py  ddp_titanic_task.py  is_ci_task.py  test_activations.py  test_callbacks.py  test_data.py  test_ddp_harness.py  test_inference.py  test_learn_isolation.py  test_linear.py  test_losses.py  test_metrics.py  test_model.py  test_modules.py  test_monitors.py  test_onnx.py  test_optimizers.py  test_pipeline.py  test_schedulers.py  test_schema.py  test_schema_async.py  test_testing.py  test_titanic.py  test_toolkit.py  test_trainer.py
tests/test_toolkit/: conftest.py  test_array.py  test_console.py  test_cv.py  test_data_structures.py  test_geometry.py  test_isolation.py  test_misc.py  test_perf.py  test_toolkit_pipeline.py  test_web.py
